syntax="proto3";

import "error.proto";

package pbgame;

message LoginRequest{
    string account = 1;
    string password = 2;
}

message LoginResponse {
    ErrorCode errorCode = 1;
}

message PlayerDataMsg{

}

service Login {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}


